--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@mapbox/shelf-pack": "^3.2.0",
+    "buffer": "^6.0.3",
+    "chroma-js": "^2.4.2",
     "d3-interpolate": "^3.0.1",
     "ndarray": "^1.0.19",
     "ndarray-canvas": "^0.0.0",
