--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "scripts": {
     "build": "webpack --config ./config/webpack.config.prod.js",
+    "build-page": "webpack --config ./config/webpack.config.prod.js && rm -rf docs && mkdir docs && mv ./dist/* ./docs && rm -rf ./dist dist-zipped",
     "start": "webpack serve --config ./config/webpack.config.dev.js"
   },
   "dependencies": {
